# python-amqp-client

./: README.md  pyproject.toml
rabbitmq_amqp_python_client/: main-pyamqp.py  main.py
rabbitmq_amqp_python_client/_pyamqp/: _connection.py  _encode.py  _transport.py  authentication.py  client.py  management_link.py
rabbitmq_amqp_python_client/_pyamqp/aio/: _management_link_async.py
