[tool.poetry]
name = "rabbitmq-amqp-python-client"
version = "0.1.0"
description = ""
authors = ["Daniele Palaia <dpalaia@vmware.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-qpid-proton = "^0.39.0"
typing_extensions ="^4.11.0"

certifi = "^2024.8.30"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
typing_extensions ="^4.11.0"
certifi = "^2024.8.30"

[tool.poetry.scripts]
main = 'rabbitmq_amqp_python_client.main-pyamqp:main'
